[gd_scene load_steps=16 format=3 uid="uid://docc6xin1bqou"]

[ext_resource type="Script" path="res://scripts/battle_system/battle_manager.gd" id="1_626np"]
[ext_resource type="Texture2D" uid="uid://db0nefci05mgl" path="res://art/image (1).png" id="2_4xsu6"]
[ext_resource type="FontFile" uid="uid://c56rtacbksa5q" path="res://art/04B_11__.TTF" id="3_ur4j6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xg6sh"]
bg_color = Color(0.270588, 0.266667, 0.313726, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dsukw"]
bg_color = Color(1, 1, 1, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_of3p7"]
bg_color = Color(0.270588, 0.266667, 0.313726, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8mnp2"]
bg_color = Color(0.74902, 0.74902, 0.72549, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_if5kg"]
bg_color = Color(1, 1, 1, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pt8cl"]
content_margin_left = 1.0
content_margin_right = 1.0
bg_color = Color(0.494118, 0.501961, 0.392157, 1)

[sub_resource type="Theme" id="Theme_6fqoa"]
default_font = ExtResource("3_ur4j6")
default_font_size = 6
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_disabled_color = Color(0.133333, 0.129412, 0.180392, 1)
Button/colors/font_focus_color = Color(0.133333, 0.129412, 0.180392, 1)
Button/colors/font_hover_color = Color(0.133333, 0.129412, 0.180392, 1)
Button/styles/disabled = SubResource("StyleBoxFlat_xg6sh")
Button/styles/focus = SubResource("StyleBoxFlat_dsukw")
Button/styles/hover = SubResource("StyleBoxFlat_dsukw")
Button/styles/normal = SubResource("StyleBoxFlat_of3p7")
Button/styles/pressed = SubResource("StyleBoxFlat_of3p7")
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_8mnp2")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_if5kg")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_if5kg")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_pt8cl")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_pt8cl")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bi14n"]
bg_color = Color(0.133333, 0.129412, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxss1"]
bg_color = Color(0.270588, 0.266667, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_msqxd"]
bg_color = Color(0.133333, 0.129412, 0.180392, 1)
corner_detail = 1

[sub_resource type="Theme" id="Theme_na5e4"]
Button/styles/normal = SubResource("StyleBoxFlat_msqxd")

[sub_resource type="GDScript" id="GDScript_oytr6"]
script/source = "extends Timer

func _on_timeout() -> void:
	%Next.visible = !%Next.visible
"

[node name="BattleScene" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_626np")

[node name="Environment" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true

[node name="Background" type="Sprite2D" parent="Environment"]
unique_name_in_owner = true
position = Vector2(121, 65)
texture = ExtResource("2_4xsu6")
hframes = 3
vframes = 3

[node name="AllyContainer" type="Marker2D" parent="Environment"]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(60, 91)

[node name="EnemyContainer" type="Marker2D" parent="Environment"]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(180, 91)

[node name="UI" type="Control" parent="."]
unique_name_in_owner = true
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_6fqoa")

[node name="PlayerPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bi14n")

[node name="MarginContainer" type="MarginContainer" parent="UI/PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="Actions" type="HBoxContainer" parent="UI/PlayerPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MainAction" type="Control" parent="UI/PlayerPanel/MarginContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="ActionContainer" type="VBoxContainer" parent="UI/PlayerPanel/MarginContainer/Actions/MainAction"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 2
alignment = 1

[node name="AttackButton" type="Button" parent="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attack"

[node name="SkillButton" type="Button" parent="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 0
disabled = true
text = "Skill"

[node name="ItemButton" type="Button" parent="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 0
text = "Item"

[node name="RunButton" type="Button" parent="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/align_to_largest_stylebox = 0
theme_override_font_sizes/font_size = 0
text = "Run"

[node name="Menu" type="Control" parent="UI/PlayerPanel/MarginContainer/Actions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="UI/PlayerPanel/MarginContainer/Actions/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oxss1")

[node name="MarginContainer" type="MarginContainer" parent="UI/PlayerPanel/MarginContainer/Actions/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="AttackMenu" type="Control" parent="UI/PlayerPanel/MarginContainer/Actions/Menu/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillMenu" type="ScrollContainer" parent="UI/PlayerPanel/MarginContainer/Actions/Menu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_na5e4")
follow_focus = true

[node name="SkillContainer" type="VBoxContainer" parent="UI/PlayerPanel/MarginContainer/Actions/Menu/MarginContainer/SkillMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="Button" type="Button" parent="UI/PlayerPanel/MarginContainer/Actions/Menu/MarginContainer/SkillMenu/SkillContainer"]
layout_mode = 2
text = "asd"

[node name="Button2" type="Button" parent="UI/PlayerPanel/MarginContainer/Actions/Menu/MarginContainer/SkillMenu/SkillContainer"]
layout_mode = 2
text = "asd"

[node name="Button3" type="Button" parent="UI/PlayerPanel/MarginContainer/Actions/Menu/MarginContainer/SkillMenu/SkillContainer"]
layout_mode = 2
text = "asd"

[node name="Button4" type="Button" parent="UI/PlayerPanel/MarginContainer/Actions/Menu/MarginContainer/SkillMenu/SkillContainer"]
layout_mode = 2
text = "asd"

[node name="ItemMenu" type="ScrollContainer" parent="UI/PlayerPanel/MarginContainer/Actions/Menu/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
follow_focus = true

[node name="ItemContainer" type="VBoxContainer" parent="UI/PlayerPanel/MarginContainer/Actions/Menu/MarginContainer/ItemMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="ActionInfo" type="Control" parent="UI/PlayerPanel/MarginContainer/Actions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoPanel" type="Panel" parent="UI/PlayerPanel/MarginContainer/Actions/ActionInfo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oxss1")

[node name="DisplayText" type="Control" parent="UI/PlayerPanel/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Text" type="RichTextLabel" parent="UI/PlayerPanel/MarginContainer/DisplayText"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_separation = 1
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "This is the Display Text UI"
scroll_active = false
scroll_following = true

[node name="Next" type="Label" parent="UI/PlayerPanel/MarginContainer/DisplayText"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = 4.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ur4j6")
theme_override_font_sizes/font_size = 8
text = ">"

[node name="BlinkNext" type="Timer" parent="UI/PlayerPanel/MarginContainer/DisplayText/Next"]
unique_name_in_owner = true
wait_time = 0.8
script = SubResource("GDScript_oytr6")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12549, 0.12549, 0.12549, 1)

[connection signal="focus_entered" from="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer/AttackButton" to="." method="show_action_menu" binds= [1]]
[connection signal="pressed" from="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer/AttackButton" to="." method="_on_attack_pressed" flags=3]
[connection signal="focus_entered" from="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer/SkillButton" to="." method="show_action_menu" binds= [2]]
[connection signal="focus_entered" from="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer/ItemButton" to="." method="show_action_menu" binds= [3]]
[connection signal="focus_entered" from="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer/RunButton" to="." method="show_action_menu" binds= [0]]
[connection signal="pressed" from="UI/PlayerPanel/MarginContainer/Actions/MainAction/ActionContainer/RunButton" to="." method="_on_run_pressed"]
[connection signal="timeout" from="UI/PlayerPanel/MarginContainer/DisplayText/Next/BlinkNext" to="UI/PlayerPanel/MarginContainer/DisplayText/Next/BlinkNext" method="_on_timeout"]
